boltffi_backend/tests/kotlin/snapshots/kotlin__direct_vector__kotlin_target_passes_direct_record_vectors_as_packed_bytes.snap
---
source: boltffi_backend/tests/kotlin/direct_vector.rs
expression: "rendered_fixture(\"direct_vector/record_vector_parameter\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_count(values: ByteArray): Int
}


data class Point(
    val x: Double,
    val y: Double
) {
    internal fun toByteArray(): ByteArray {
        val buffer = java.nio.ByteBuffer
            .allocate(STRUCT_SIZE)
            .order(java.nio.ByteOrder.nativeOrder())
        writeTo(buffer, 0)
        return buffer.array()
    }

    internal fun writeTo(buffer: java.nio.ByteBuffer, offset: Int) {
        buffer.putDouble(offset, x)
        buffer.putDouble(offset + 8, y)
    }

    companion object {
        internal const val STRUCT_SIZE: Int = 16

        internal fun fromByteArray(bytes: ByteArray): Point {
            require(bytes.size == STRUCT_SIZE)
            val buffer = java.nio.ByteBuffer
                .wrap(bytes)
                .order(java.nio.ByteOrder.nativeOrder())
            return fromBuffer(buffer, 0)
        }

        internal fun fromBuffer(buffer: java.nio.ByteBuffer, offset: Int): Point {
            return Point(
                buffer.getDouble(offset),
                buffer.getDouble(offset + 8)
            )
        }
    }
}

fun count(values: List<Point>): UInt {
    return Native.boltffi_function_demo_count(DirectVectorCodec.writeRecordList(values, 16, { item, buffer, offset -> item.writeTo(buffer, offset) })).toUInt()
}
